Adds 'timeout' parameter to match 'configtimeout' in puppet.conf

--- a/templates/puppet.conf.erb
+++ b/templates/puppet.conf.erb
@@ -11,6 +11,9 @@
   <%- if @no_warnings && ! @no_warnings.empty? -%>
   disable_warnings = <%= @no_warnings.join(', ') %>
   <%- end -%>
+  <%- if @timeout != '' -%>
+  configtimeout = <%= @timeout %>
+  <%- end -%>
 <% if @agent -%>
 
 [agent]
