--- a/templates/puppet.conf.erb
+++ b/templates/puppet.conf.erb
@@ -6,6 +6,9 @@
   <%- if @no_warnings && ! @no_warnings.empty? -%>
     disable_warnings = <%= @no_warnings.join(', ') %>
   <%- end -%>
+  <%- if @strict_variables -%>
+    strict_variables = true
+  <%- end -%>
   <%- if @dns_alt_names && ! @dns_alt_names.empty? -%>
     dns_alt_names = <%= @dns_alt_names.join(', ') %>
   <%- end -%>
